--- a/public/assets/css-rtl/style.css
+++ b/public/assets/css-rtl/style.css
@@ -85,14 +85,21 @@ License        :   Licensed under ThemeForest License
 /*@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900");
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;500;700&display=swap');*/
 /*@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;800&display=swap');*/
-@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap');*/
 /* ######## BOOTSTRAP ######## */
 /*Color variables*/
 /*gray variables*/
 /*white variables*/
 /*black variables*/
 /*shadow variables*/
+@font-face {
+    font-family: 'Cairo';
+    font-style: normal;
+    font-weight: 400;
+    src: url('/fonts/Cairo-Medium.ttf');
+}
+
 html {
   font-family: sans-serif;
   line-height: 1.15;
